--- a/store/templates/store.html
+++ b/store/templates/store.html
@@ -1,1 +1,79 @@
-<h1>Store Page</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class = 'container'>
+    <div class = 'row'>
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+        <div class = 'col-md-4 col-lg-4'>
+          <div class="card" style="width: 18rem;">
+              <img src="" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h3 class="card-title"></h3>
+                <h4 class="card-text">৳ </h4>
+                <a  class="btn btn-primary">Add to Cart</a>
+              </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+
+
+{% endblock %}
