Saving to GitHub

--- a/store/static/css/style.css
+++ b/store/static/css/style.css
@@ -72,3 +72,12 @@
 .hidden{
     display: none;
 }
+
+img{
+    width:100%;
+    height:auto;
+  }
+.card-img-top{
+    width: 100%;
+    height: auto;
+}
