--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><h2><strong>KhadokPeople</strong></h2></a>
+          <a class="navbar-brand" href="#"><h2><strong class="text-danger">Khadok</strong><b>People</b></h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
